--- a/.env.example
+++ b/.env.example
@@ -30,5 +30,6 @@ RESTRICTED_TOPICS=medical advice,legal advice,financial advice,personal informat
 RATE_LIMIT_REQUESTS=100
 RATE_LIMIT_WINDOW=3600
 
-# CORS - Add your frontend domains
-# ALLOWED_ORIGINS=https://yourdomain.com,https://www.yourdomain.com
+# CORS - Add your frontend domains (comma-separated)
+# Uncomment and modify to allow your frontend to access the API
+# ALLOWED_ORIGINS=http://localhost:3000,https://yourdomain.com,https://www.yourdomain.com
