--- a/.env.example
+++ b/.env.example
@@ -32,4 +32,4 @@ RATE_LIMIT_WINDOW=3600
 
 # CORS - Add your frontend domains (comma-separated)
 # Uncomment and modify to allow your frontend to access the API
-# ALLOWED_ORIGINS=http://localhost:3000,https://yourdomain.com,https://www.yourdomain.com
+ALLOWED_ORIGINS=http://localhost:3000,https://yourdomain.com,https://www.yourdomain.com
